# Vulkan-Code

./: README.md  compileShadesToSpvs_meshShader.bat
ComputeShader/src/: Triangle.cpp  Triangle.h
ComputeShader/src/shaders/: shader.vert
ComputeShader/src/spvs/: vert.spv
Mesh Shader/: .gitignore  CMakeLists.txt
Mesh Shader/src/: CMakeLists.txt  Triangle.cpp  Triangle.cpp.rej  Triangle.h  VulkanGlftModel.cpp  VulkanGlftModel.h  compileShadesToSpvs_meshShader.bat
Mesh Shader/src/shaders/: shader.frag  shader.mesh  shader.task
Mesh Shader/src/spvs/: frag.spv  mesh.spv  task.spv
Ray Tracing/: CMakeLists.txt
Ray Tracing/src/: Triangle.cpp  Triangle.h  compileShadesToSpvs.bat
Ray Tracing/src/shaders/: shader.comp
ShadowMap/: CMakeLists.txt
ShadowMap/src/: ShadowMap.cpp  ShadowMap.h  main.cpp  object.cpp  object.h
ShadowMap/src/shaders/: pass_0.frag  pass_0.vert  pass_1.frag  pass_1.vert
ShadowMap/src/spvs/: pass0_vert.spv  pass1_frag.spv  pass1_vert.spv
Transparent/data/fig_dogFrenchBulldog/: 14583_fig_dogFrenchBulldog_v1.mtl
Transparent/src/: Transparent.cpp  Transparent.h  object.h
Transparent/src/shaders/: pass_0.frag  pass_1.frag  shader.frag  shader.vert
Transparent/src/spvs/: frag.spv  pass0_frag.spv  pass0_vert.spv  pass1_frag.spv  vert.spv
Triangle/: CMakeLists.txt
Triangle/src/: Triangle.cpp  Triangle.h
Triangle/src/spvs/: comp.spv
WBOIT/src/: Transparent.cpp  compileShadesToSpvs.bat  object.cpp
blend/: CMakeLists.txt
blend/src/: .gitignore  CMakeLists.txt  Transparent.cpp  Transparent.h  compileShadesToSpvs.bat  main.cpp
(+10 files in other folders)
